--- a/client/src/styles/App.scss
+++ b/client/src/styles/App.scss
@@ -15,7 +15,7 @@
   }
 
   .App-header {
-    background-color: #282c34;
+    background-color: #F0F2F5;
     min-height: 100vh;
     // display: flex;
     // flex-direction: column;
