--- a/client/src/views/Nav/Nav.scss
+++ b/client/src/views/Nav/Nav.scss
@@ -1,27 +1,195 @@
-/* Add a black background color to the top navigation */
-.topnav {
-    background-color: grey;
-    overflow        : hidden;
+.shrink-nav {
+  padding: 10px 0px;
 }
 
-/* Style the links inside the navigation bar */
-.topnav a {
-    float          : left;
-    color          : #f2f2f2;
-    text-align     : center;
-    padding        : 14px 16px;
-    text-decoration: none;
-    font-size      : 17px;
+.nav-container {
+  z-index: 2;
+  position: sticky;
+  top: 0;
+  background-color: white;
+  transition: 0.4s;
+
+  .nav-content {
+    padding: 0px 90px;
+    background-color: white;
+    color: black;
+    font-size: 17px;
+    text-align: center;
+    height: 55px;
+    justify-content: space-between;
+
+    a {
+      text-decoration: none;
+      cursor: pointer;
+    }
+
+    .left-content {
+      padding: 0px;
+
+      .logo-content {
+        float: left;
+        margin-top: 5px;
+        color: #45c3d2;
+        font-weight: bold;
+
+        span {
+          img {
+            width: 60px;
+          }
+        }
+      }
+    }
+
+    .center-content {
+      margin-top: 5px;
+      padding-top: 5px;
+      margin-left: 10px;
+      height: 40px;
+      display: flex;
+      justify-content: space-around;
+
+      .title {
+        color: black;
+        font-size: 15px;
+        font-weight: 500;
+      }
+
+      .title:hover {
+        opacity: 0.5;
+      }
+    }
+
+    .right-content {
+      margin-top: 10px;
+      position: relative;
+      display: flex;
+
+      label {
+        position: absolute;
+        display: flex !important;
+        margin-top: 10px;
+        margin-left: 16px;
+        font-size: 17px;
+      }
+
+      input {
+        height: 35px;
+        background-color: white;
+        border-radius: 40px 40px 40px 40px;
+        padding: 10px 25px 10px 45px;
+      }
+
+      input:focus {
+        border-color: rgb(230, 230, 230) !important;
+        box-shadow: 1px 1px 1px rgb(230, 230, 230) !important;
+      }
+
+      .language-content {
+        margin-top: 5px;
+        cursor: pointer;
+
+        .title {
+          font-size: 16px;
+          font-weight: normal;
+        }
+
+        .down {
+          font-size: 13px;
+        }
+
+        .title-language:hover {
+          opacity: 0.5;
+        }
+
+        .dropdown-language {
+          display: none;
+          margin-top: 5px;
+          background-color: white;
+          border: 1px solid rgb(230, 230, 230);
+
+          span {
+            padding-top: 5px;
+            padding-bottom: 5px;
+            display: block;
+            font-size: 15px;
+          }
+
+          .vi-language:hover {
+            color: #45c3d2;
+          }
+
+          .en-language:hover {
+            color: #45c3d2;
+          }
+        }
+
+        .dropdown-language::before {
+          content: "";
+          position: absolute;
+          top: 25%;
+          margin-left: -5px;
+          border-width: 5px;
+          border-style: solid;
+          border-color: transparent transparent rgb(230, 230, 230) transparent;
+        }
+
+        .dropdown-language::after {
+          content: "";
+          position: absolute;
+          top: 26%;
+          margin-left: -5px;
+          border-width: 5px;
+          border-style: solid;
+          border-color: transparent transparent white transparent;
+        }
+      }
+
+      .language-content:hover {
+        .dropdown-language {
+          display: inherit;
+        }
+      }
+
+      .help-content {
+        margin-top: 5px;
+        cursor: pointer;
+
+        i {
+          color: #45c3d2;
+        }
+
+        .title {
+          color: black;
+          font-weight: normal;
+        }
+
+      }
+
+      .help-content:hover {
+        opacity: 0.5;
+      }
+    }
+  }
 }
 
-/* Change the color of links on hover */
-.topnav a:hover {
-    background-color: #ddd;
-    color           : black;
-}
+// /* Style the links inside the navigation bar */
+// .nav-content a {
+//   float: left;
+//   color: #f2f2f2;
 
-/* Add a color to the active/current link */
-.topnav a.active {
-    background-color: #04AA6D;
-    color           : white;
-}
+//   padding: 14px 16px;
+//   text-decoration: none;
+
+// }
+
+// /* Change the color of links on hover */
+// .nav-content a:hover {
+//   background-color: #ddd;
+
+// }
+
+// /* Add a color to the active/current link */
+// .nav-content a.active {
+//   background-color: #04AA6D;
+//   color: white;
+// }
