--- a/client/src/views/Nav/Nav.scss
+++ b/client/src/views/Nav/Nav.scss
@@ -107,6 +107,7 @@
         .dropdown-language {
           display: none;
           margin-top: 5px;
+          border-radius: 5px;
           background-color: white;
           border: 1px solid rgb(230, 230, 230);
 
