--- a/client/src/views/System/CreateNew.scss
+++ b/client/src/views/System/CreateNew.scss
@@ -1,4 +1,4 @@
-.EditUser-content {
+.Create-content {
     margin-top: 10px;
     position: absolute;
     left: 50%;
@@ -37,7 +37,7 @@
         }
     }
 
-    .EditForm {
+    .CreateForm {
         .avatar {
             padding: 10px 5px;
             border: 1px solid rgb(230, 230, 230);
